Add concurrency constructs