@@ -1,7 +1,6 @@
 plugins {
     java
     kotlin("jvm") version "1.7.22"
-    application
 }
 
 group = "io.tatumalenko"
@@ -12,9 +11,27 @@ repositories {
 }
 
 dependencies {
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     testImplementation(kotlin("test")) // The Kotlin test library
 }
 
-application {
-    mainClass.set("io.tatumalenko.KotlinJavaHybridKt") // The main class of the application
+sourceSets.getByName("main") {
+    java.srcDir("src/main/java")
+    java.srcDir("src/main/kotlin")
+}
+sourceSets.getByName("test") {
+    java.srcDir("src/test/java")
+    java.srcDir("src/test/kotlin")
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test> {
+    jvmArgs?.add("--enable-preview")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs?.add("--enable-preview")
 }
